# nonebot-plugin-jmcomic

./: LICENSE  README.md  pyproject.toml
nonebot_plugin_jmcomic/: __init__.py
nonebot_plugin_jmcomicdownload/: __init__.py  config.yml
