# nonebot-plugin-jmcomic/pyproject.toml
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nonebot-plugin-jmcomic"
version = "1.0.0"
description = "A NoneBot2 plugin to download comics from JMComic and generate PDFs for upload to group chats."
readme = "README.md"
requires-python = ">=3.9,<4.0"
license = "MIT"
authors = [
    { name = "watshon14", email = "2128433395@qq.com" },
]
dependencies = [
    "nonebot2>=2.4.0",
    "img2pdf>=0.6.0",
    "jmcomic>=2.5.32",
]
keywords = ["nonebot2", "plugin", 'jmcomic"]
packages = [
    { include = "nonebot-plugin-jmcomic" }
]


[project.urls]
Homepage = "https://github.com/watshon14/nonebot-plugin-jmcomic"
Repository = "https://github.com/watshon14/nonebot-plugin-jmcomic.git"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot-plugin-jmcomic"]

[tool.pdm]
[tool.pdm.build]
includes = ["nonebot-plugin-jmcomic"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
