# nonebot_plugin_jmcomicdownload/pyproject.toml

[project]
name = "nonebot_plugin_jmcomicdownload"
version = "1.1.4"
description = "A NoneBot2 plugin to download comics from JMComic and generate PDFs for upload to group chats."
readme = "README.md"
requires-python = ">=3.9,<4.0"
license = "MIT"
authors = [
    { name = "watshon14", email = "2128433395@qq.com" },
]
dependencies = [
    "nonebot2>=2.4.0",
    "img2pdf>=0.6.0",
    "jmcomic>=2.5.32",
    "nonebot_plugin_localstore>=0.7",
    "nonebot-adapter-onebot>=2.3"
]
keywords = ["nonebot2", "plugin", "jmcomic"]

packages = [
    { include = "nonebot_plugin_jmcomicdownload" }
]

[project.urls]
Homepage = "https://github.com/watshon14/nonebot_plugin_jmcomicdownload"
Repository = "https://github.com/watshon14/nonebot_plugin_jmcomicdownload.git"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_jmcomicdownload"]

[tool.pdm]
[tool.pdm.build]
includes = ["nonebot_plugin_jmcomicdownload"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nonebot_plugin_jmcomicdownload"]
